final edit to index text

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <div class="row mb-5 justify-content-center">
                 <div class="col-lg-12">
                     <h2 class="section-title-home">Featured Projects</h2>
-                    <p class="lead-in-home">A selection of companies and concepts I've designed, strategized, and coded for.</p>
+                    <p class="lead-in-home">
+                        A selection of companies and concepts I've designed, strategized, and coded for.<br />
+                        Explore the full case studies on the Projects page.
+                    </p>
                 </div>
             </div>
 
