text changes in projects

--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
                         <div class="col-12 col-lg-5 textual">
                             <h2>JuicOrganic</h2>
                             <h4 class="project-subtitle">Smart Vending Machine SaaS</h4>
-                            <div class="project-meta">2nd Semester Exam Project &middot; UX Researcher &middot; Front-End Developer</div>
+                            <div class="project-meta">UX Researcher &middot; Front-End Developer</div>
                             <p class="project-pitch">As a 2nd Semester Exam Project, we were tasked with helping JuicOrganic pivot from a B2B model to B2C. Our concept was a smart vending machine that encourages sustainability, encouraging users to refill reusable bottles through a digital interface with a reward system.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
@@ -210,7 +210,7 @@
                         <div class="col-12 col-lg-5 textual">
                             <h2>Econiq</h2>
                             <h4 class="project-subtitle">FinTech SaaS Prototype</h4>
-                            <div class="project-meta">Part of Das Kleine Büro &middot; Product Owner &middot; UX Lead</div>
+                            <div class="project-meta">Product Owner &middot; UX Lead</div>
                             <p class="project-pitch">Econiq, was one of our clients for Das Kleine Büro. They're a FinTech startup and needed a user-centered SaaS prototype. The challenge was taking a complex financial forecasting tool and making it intuitive for non-expert users.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
@@ -271,7 +271,7 @@
                         <div class="col-12 col-lg-5 textual">
                             <h2>Gestalt</h2>
                             <h4 class="project-subtitle">Digital Magazine</h4>
-                            <div class="project-meta">Elective: Visual Design and Layout for Digital Platforms &middot; Writer &middot; Photographer &middot; Designer</div>
+                            <div class="project-meta">Writer &middot; Photographer &middot; Designer</div>
                             <p class="project-pitch">As part of the elective course Visual Design and Layout for Digital Platforms, I contributed a feature article to a collaborative digital magazine exploring how digital media shapes our perception of reality.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
@@ -338,7 +338,7 @@
                         <div class="col-12 col-lg-5 textual">
                             <h2>Hoedown After Dark</h2>
                             <h4 class="project-subtitle">E-commerce Brand</h4>
-                            <div class="project-meta">Project Lead &middot; Strategist</div>
+                            <div class="project-meta">Project Coordination &middot; Strategist</div>
                             <p class="project-pitch">We created a fashion brand blending Western aesthetics with underground techno culture and the queer community. The goal was to build a strong visual identity and a tested product line that supported the LGBT Asylum charity.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
