added CTA button to index to see projects

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                 <div class="intro-logo">
                     <img src="img/logo-gold.svg" alt="Edda Ósk logo" class="intro-logo-img" />
                 </div>
+                <div class="text-center">
+                    <a href="projects.html" class="btn btn-intro mt-4 mb-5">VIEW MY PROJECTS</a>
+                </div>
             </div>
         </section>
 
