link added to landing page logos

--- a/index.html
+++ b/index.html
@@ -76,19 +76,29 @@
 
             <div class="project-icons-row">
                 <div class="project-icon-wrapper">
-                    <img src="img/project-icons/gestalt.webp" alt="Gestalt Project" class="project-icon" />
+                    <a href="projects.html#gestalt" class="project-icon-link" aria-label="View Gestalt project">
+                        <img src="img/project-icons/gestalt.webp" alt="Gestalt Project" class="project-icon" />
+                    </a>
                 </div>
                 <div class="project-icon-wrapper">
-                    <img src="img/project-icons/econiq-logo.png" alt="Econiq Project" class="project-icon" />
+                    <a href="projects.html#econiq" class="project-icon-link" aria-label="View Econiq project">
+                        <img src="img/project-icons/econiq-logo.png" alt="Econiq Project" class="project-icon" />
+                    </a>
                 </div>
                 <div class="project-icon-wrapper">
-                    <img src="img/project-icons/dkb-logo.png" alt="DKB Project" class="project-icon logo-weighted" />
+                    <a href="projects.html#dkb" class="project-icon-link" aria-label="View Das Kleine Büro project">
+                        <img src="img/project-icons/dkb-logo.png" alt="DKB Project" class="project-icon logo-weighted" />
+                    </a>
                 </div>
                 <div class="project-icon-wrapper">
-                    <img src="img/project-icons/juic-organic.png" alt="Juic Organic Project" class="project-icon" />
+                    <a href="projects.html#juicorganic" class="project-icon-link" aria-label="View JuicOrganic project">
+                        <img src="img/project-icons/juic-organic.png" alt="JuicOrganic Project" class="project-icon" />
+                    </a>
                 </div>
                 <div class="project-icon-wrapper">
-                    <img src="img/project-icons/hoedown-logo.png" alt="Hoedown Project" class="project-icon" />
+                    <a href="projects.html#hoedown" class="project-icon-link" aria-label="View Hoedown After Dark project">
+                        <img src="img/project-icons/hoedown-logo.png" alt="Hoedown Project" class="project-icon" />
+                    </a>
                 </div>
             </div>
         </div>
