--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="project-list">
                     <!-- JuicOrganic -->
-                    <div class="row g-5 project-row no-divider">
+                    <div class="row g-5 project-row no-divider" id="juicorganic">
                         <div class="col-12 col-lg-7 graphical">
                             <div class="carousel-wrapper">
                                 <div id="carouselJuicOrganic" class="carousel slide project-carousel" data-bs-interval="false">
@@ -118,7 +118,7 @@
                     </div>
 
                     <!-- Das Büro – Digital Design Studio -->
-                    <div class="row g-5 project-row">
+                    <div class="row g-5 project-row" id="dkb">
                         <div class="col-12 col-lg-7 graphical">
                             <div class="carousel-wrapper">
                                 <div id="carouselDasBuro" class="carousel slide project-carousel" data-bs-interval="false">
@@ -177,7 +177,7 @@
                     </div>
 
                     <!-- Econiq -->
-                    <div class="row g-5 project-row no-divider">
+                    <div class="row g-5 project-row no-divider" id="econiq">
                         <div class="col-12 col-lg-7 graphical">
                             <div class="carousel-wrapper">
                                 <div id="carouselEconiq" class="carousel slide project-carousel" data-bs-interval="false">
@@ -235,7 +235,7 @@
                     </div>
 
                     <!-- Gestalt – Digital Magazine -->
-                    <div class="row g-5 project-row">
+                    <div class="row g-5 project-row" id="gestalt">
                         <div class="col-12 col-lg-7 graphical">
                             <div class="carousel-wrapper">
                                 <div id="carouselGestalt" class="carousel slide project-carousel" data-bs-interval="false">
@@ -299,7 +299,7 @@
                         </div>
                     </div>
                     <!-- Hoedown After Dark -->
-                    <div class="row g-5 project-row">
+                    <div class="row g-5 project-row" id="hoedown">
                         <div class="col-12 col-lg-7 graphical">
                             <div class="carousel-wrapper">
                                 <div id="carouselHoedown" class="carousel slide project-carousel" data-bs-interval="false">
