--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
 
         <section class="intro-text">
             <div class="container">
-                <p class="intro-description mx-auto">Hi, I'm Edda, a multimedia design student at Zealand Academy with a BA in Anthropology and a Master's in Tourism. I'm passionate about turning complex ideas into clear, human-centered digital experiences. My background gives me a unique perspective on people and behavior, which I combine with design to create solutions that are intuitive, practical, and visually engaging.</p>
-
+                <p class="intro-description mx-auto mb-3">
+                    Hi, I’m Edda, I bridge the gap between human behavior and digital reality.<br />
+                    My path to design started with a curiosity about people. Holding a BA in Anthropology and a Master's in Tourism, I spent years analyzing how we experience the world. Today, I translate those insights into digital products. I combine research, visual design, and code to create solutions that are not just beautiful to look at, but easy for real people to use.
+                </p>
                 <div class="intro-logo">
                     <img src="img/logo-gold.svg" alt="Edda Ósk logo" class="intro-logo-img" />
                 </div>
-                <div class="text-center">
-                    <a href="projects.html" class="btn btn-intro mt-4 mb-5">VIEW MY PROJECTS</a>
+                <div class="text-center mt-3 mb-5">
+                    <a href="projects.html" class="btn btn-intro">VIEW MY PROJECTS</a>
                 </div>
             </div>
         </section>
