about me and index text updated

--- a/about.html
+++ b/about.html
@@ -42,19 +42,19 @@
         <!-- Bio -->
         <section class="py-5 about-intro">
             <div class="container">
-                <div class="row align-items-start g-3 g-lg-5">
+                <div class="row g-3 g-lg-5">
                     <div class="col-md-5 text-center">
                         <img src="img/edda.jpg" alt="Portrait of Edda Ósk Óskarsdóttir" class="img-fluid rounded-3 shadow-sm about-portrait" loading="lazy" />
                     </div>
                     <div class="col-md-7">
-                        <h1>About me</h1>
-                        <p class="fs-5 mb-4">Hello, I'm Edda, a multimedia design student at Zealand Academy of Technologies and Business, currently in my third semester. I specialize in UX research, visual design and project management, turning complex challenges into clear, human-centered solutions.</p>
+                        <h1 class="mt-0">About me</h1>
+                        <p class="fs-5 mb-4">Hello, I'm Edda, an Icelandic Multimedia Design student at Zealand Academy, specializing in UX Research, Visual Design, and Project Management. My approach to design is methodical and informed. I use my completed BA in Anthropology and Master's in Tourism to deeply analyze human challenges and translate those insights into clear, innovative digital solutions.</p>
 
                         <h2>How I work</h2>
-                        <p class="fs-5 mb-4">I believe great digital experiences come from clarity, empathy, and teamwork. To me, that means understanding real user needs, building thoughtful structures, and keeping collaboration open and honest. I love creating clean, visually balanced interfaces that are grounded in research and reflect how people actually think and interact.</p>
+                        <p class="fs-5 mb-4">Great digital experiences emerge from a methodology rooted in empathy and rigorous teamwork. My background ensures every project is grounded in genuine user understanding and sound reasoning. Maintaining an efficient workflow necessitates open communication and methodical structures. Ultimately, my focus is on contributing to solutions that are visually balanced, functionally clear, and authentically reflect human behavior.</p>
 
                         <h2>What I can do</h2>
-                        <p class="fs-5">I enjoy working across a wide range of digital design, from UX research and information architecture to UI, magazine design, prototyping, and coding. I tend to find something interesting and challenging in everything I do, and I like combining creativity and technical skills to bring ideas to life. I approach projects with a calm, methodical mindset, enjoy collaborating closely with others, and focus on creating work that delivers meaningful results.</p>
+                        <p class="fs-5">I am a highly versatile team member, contributing across the full product lifecycle. My strategic analysis skills blend with hands-on execution, covering deep UX Research, prototyping, UI, and technical Front-End Coding (HTML/SCSS/JS). I maintain a calm, methodical mindset throughout every task. This blend of creative ideas and technical skills helps the team deliver meaningful results.</p>
                     </div>
                 </div>
             </div>
