connect button added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html">Projects</a>
                         </li>
+                        <li class="nav-item nav-cta">
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">Connect</a>
+                        </li>
                     </ul>
                 </div>
             </div>
