she codes card added

--- a/projects.html
+++ b/projects.html
@@ -302,7 +302,7 @@
                         </div>
                     </div>
                     <!-- Hoedown After Dark -->
-                    <div class="row g-5 project-row" id="hoedown">
+                    <div class="row g-5 project-row no-divider" id="hoedown">
                         <div class="col-12 col-lg-7 graphical">
                             <div class="carousel-wrapper">
                                 <div id="carouselHoedown" class="carousel slide project-carousel" data-bs-interval="false">
@@ -366,6 +366,48 @@
                                     </div>
                                 </div>
                             </details>
+                        </div>
+                    </div>
+                    <div class="row g-5 project-row no-divider" id="shecodes">
+                        <div class="col-12 col-lg-7 graphical">
+                            <div class="carousel-wrapper">
+                                <div id="carouselSheCodes" class="carousel slide project-carousel" data-bs-interval="false">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="img/SC1.png" class="d-block w-100" alt="SheCodes project screenshot: Technical exercise 1" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/SC2.png" class="d-block w-100" alt="SheCodes project screenshot: Technical exercise 2" />
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselSheCodes" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselSheCodes" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
+                                <div class="slide-counter"><span class="current-slide">1</span> / <span class="total-slides">2</span></div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-5 textual">
+                            <h2>Technical Exercises</h2>
+                            <h4 class="project-subtitle">Front-End Coding & Ongoing Development</h4>
+                            <div class="project-meta">HTML · CSS · JavaScript</div>
+
+                            <p class="project-pitch">I actively take courses with SheCodes to further develop and deepen my skills within front-end development. I am currently working through the SheCodes Plus workshops, focusing on building professional-grade applications with modern JavaScript and in the future, API integration as well.</p>
+
+                            <h5>Technical Focus</h5>
+                            <ul>
+                                <li>Responsive Layout Builds</li>
+                                <li>Custom JavaScript Functions</li>
+                            </ul>
+
+                            <div class="project-links-inside mt-5">
+                                <a href="https://www.shecodes.io/graduates/170708-edda-oskarsdottir" target="_blank" class="project-link">View My SheCodes Profile</a>
+                            </div>
                         </div>
                     </div>
                 </div>
