shecodes name edited

--- a/projects.html
+++ b/projects.html
@@ -91,17 +91,18 @@
                         <!-- Text column -->
                         <div class="col-12 col-lg-6 textual">
                             <h2>JuicOrganic</h2>
-                            <h4 class="project-subtitle">Smart Vending Machine SaaS</h4>
-                            <div class="project-meta">UX Researcher &middot; Front-End Developer</div>
-                            <p class="project-pitch">As a 2nd Semester Exam Project, we were tasked with helping JuicOrganic pivot from a B2B model to B2C. Our concept was a smart vending machine that encourages sustainability, encouraging users to refill reusable bottles through a digital interface with a reward system.</p>
+                            <h4 class="project-subtitle">Smart Vending Machine Kiosk UI</h4>
+                            <div class="project-meta">UX Research & Design &middot; Front-End Development &middot; Motion Graphics</div>
+                            <p class="project-pitch">As a 2nd Semester Exam Project, we were tasked with helping JuicOrganic pivot from a B2B model to B2C. We came up with a smart vending machine concept that encourages sustainability, inspiring users to refill reusable bottles through a digital interface with a reward system.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
-                                    <p>I wore two hats on this project: Researcher and Developer. I conducted deep-dive interviews to understand why users hesitate to use reusable solutions, then translated those insights into user journeys and personas. On the technical side, I built the front-end architecture. I coded the interface using HTML, SCSS, and JavaScript, ensuring the design was responsive. I also animated the promotional video in After Effects that was also used as part of the vending machine interface.</p>
+                                    <p>Our group of three worked closely on all aspects, but I wore two main hats on this project: UX Designer and Developer. I leveraged anthropological methods to conduct deep-dive interviews to understand why users hesitate to use reusable solutions, then translated those insights into user journeys and personas and low-fi wireframes. On the technical side, I built the front-end architecture. I coded the interface using HTML, SCSS, and JavaScript, ensuring the design was responsive. I also animated a promotional video in After Effects, which was also used as part of the vending machine interface.</p>
                                     <h5>Key Deliverables</h5>
                                     <ul>
                                         <li><strong>UX Research:</strong> Personas and data analysis.</li>
+                                        <li><strong>UX Design:</strong> Wireframes and information architecture</li>
                                         <li><strong>Front-End Code:</strong> A responsive prototype using HTML, SCSS, JavaScript and Bootstrap.</li>
                                         <li><strong>Motion Graphics:</strong> A promotional social media video.</li>
                                     </ul>
@@ -110,6 +111,7 @@
                                         <ul>
                                             <li><strong>The Developer Handoff:</strong> Writing the code myself taught me how important it is to keep design files organised for developers.</li>
                                             <li><strong>Iterative Testing:</strong> We tested the concept multiple times, and I learned not to get too attached to the first idea and the value of testing insights.</li>
+                                            <li><strong>Close team collaboration:</strong> Our team worked very well together, building on each other’s ideas and work, with no space for ego.</li>
                                         </ul>
                                     </div>
                                     <div class="project-links-inside mt-4">
@@ -393,7 +395,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-lg-6 textual">
-                            <h2>Technical Exercises</h2>
+                            <h2>SheCodes</h2>
                             <h4 class="project-subtitle">Front-End Coding & Ongoing Development</h4>
                             <div class="project-meta">HTML · CSS · JavaScript</div>
 
