Final edits to projects text

--- a/projects.html
+++ b/projects.html
@@ -156,24 +156,24 @@
                         <div class="col-12 col-lg-6 textual">
                             <h2>Das Kleine Büro</h2>
                             <h4 class="project-subtitle">Digital Agency Simulation</h4>
-                            <div class="project-meta">Project Coordinator &middot; Team Management</div>
-                            <p class="project-pitch">We formed a nine-person digital agency team to deliver real client work, including branding and prototyping. The challenge was maintaining quality and coherence across our diverse group.</p>
+                            <div class="project-meta">Project Coordinator &middot; Team Manager</div>
+                            <p class="project-pitch">We formed a nine-person digital agency to deliver real client work, including branding, prototyping and visual design. The challenge was maintaining quality and coherence across a diverse student team while simultaneously managing multiple client accounts.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
-                                    <p>My primary focus was Project Coordination. I oversaw the entire workflow, led daily stand-ups, and facilitated communication between sub-teams. I acted as the glue that kept the agency running. I matched team members to tasks based on their individual strengths to maximize efficiency.</p>
+                                    <p>My primary focus was Project Coordination. I oversaw the entire workflow, led daily stand-ups, facilitated communication between sub-teams, and kept our Acting CEO (teacher) informed on progress. I matched team members to tasks based on their individual strengths to maximise efficiency, stepping in to assist across projects whenever bottlenecks appeared. Beyond team management, I also maintained a hands-on role by taking ownership of one of the client cases.</p>
                                     <h5>Key Deliverables</h5>
                                     <ul>
                                         <li><strong>Team Framework:</strong> structured workflows and communication channels.</li>
                                         <li><strong>Resource Management:</strong> Task delegation based on skill mapping.</li>
-                                        <li><strong>Client Management:</strong> Handling feedback and presentations.</li>
+                                        <li><strong>Client Management:</strong> Oversight of multiple client cases and delivery</li>
                                     </ul>
                                     <h5>What I Learned</h5>
                                     <div class="learning-box">
                                         <ul>
-                                            <li><strong>Leadership:</strong> I leaned into a more of a leadership role, over only coordination, and learned valuable lessons about leadership and how it's often about clearing obstacles for my teammates so they can do their best work.</li>
-                                            <li><strong>Soft Skills:</strong> Our group received top marks for teamwork, confirming that the psychological safety I worked for is key to creative output.</li>
+                                            <li><strong>Leadership:</strong> I leaned into more of a leadership role, beyond only coordination, and learned valuable lessons about servant leadership and how it's often about clearing obstacles for my teammates so they can do their best work.</li>
+                                            <li><strong>Soft Skills:</strong> Our group received top marks for teamwork, both from other students and our teachers, confirming that the psychological safety I fostered was a key driver for our creative output and team success.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -215,18 +215,18 @@
                         <div class="col-12 col-lg-6 textual">
                             <h2>Econiq</h2>
                             <h4 class="project-subtitle">FinTech SaaS Prototype</h4>
-                            <div class="project-meta">Product Owner &middot; UX Lead</div>
-                            <p class="project-pitch">Econiq, was one of our clients for Das Kleine Büro. They're a FinTech startup and needed a user-centered SaaS prototype. The challenge was taking a complex financial forecasting tool and making it intuitive for non-expert users.</p>
+                            <div class="project-meta">Product Owner &middot; UX & Design Lead</div>
+                            <p class="project-pitch">Econiq was a client for our agency simulation, Das Kleine Büro. They are a FinTech startup that needed a user-centered SaaS prototype. The challenge was transforming a complex financial forecasting tool into an intuitive interface for non-expert users.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
-                                    <p>I served as the Product Owner, bridging the gap between the client's complex requirements and our design team. I led the UX direction, ensuring the complex data could be communicated in a clear, simple and visual way. I worked on the user research and personas to map out the financial workflows. I then applied persuasive design principles to optimise the information architecture, transforming jargon-heavy concepts into approachable dashboards.</p>
+                                    <p>I served as the Product Owner, bridging the gap between the client's business requirements and our team. Simultaneously, I acted as UX & Design Lead, taking the project from concept to high-fidelity. I started by structuring the layout with low-fidelity wireframes to map out financial workflows, then moved into Figma to build the final prototype. I conducted user testing to validate the interface, ensuring complex data became a clean, intuitive user experience.</p>
                                     <h5>Key Deliverables</h5>
                                     <ul>
+                                        <li><strong>UX/UI Design:</strong> End-to-end design from low-fi wireframes to a tested clickable Figma prototype.</li>
                                         <li><strong>Information Architecture:</strong> Simplified sitemaps for complex data.</li>
                                         <li><strong>UX Strategy:</strong> User journeys focused on trust and clarity.</li>
-                                        <li><strong>High-Fidelity Prototype:</strong> A tested, clean interface.</li>
                                     </ul>
                                     <h5>What I Learned</h5>
                                     <div class="learning-box">
@@ -276,24 +276,24 @@
                         <div class="col-12 col-lg-6 textual">
                             <h2>Gestalt</h2>
                             <h4 class="project-subtitle">Digital Magazine</h4>
-                            <div class="project-meta">Writer &middot; Photographer &middot; Designer</div>
-                            <p class="project-pitch">As part of the elective course Visual Design and Layout for Digital Platforms, I contributed a feature article to a collaborative digital magazine exploring how digital media shapes our perception of reality.</p>
+                            <div class="project-meta">Writer &middot; Photographer &middot; Editorial Designer</div>
+                            <p class="project-pitch">As part of the elective course Visual Design and Layout, I contributed a feature article to a collaborative digital magazine. The piece explores how digital media shapes our perception of reality through the concept of echo chambers.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
-                                    <p>This was a solo execution within a collaborative framework. I authored the article to interpret the theme through an anthropological lens. I photographed all original assets to ensure a unique visual language. I then designed the layout, strictly applying Gestalt laws and grid systems to create a reading experience that felt structured yet immersive.</p>
+                                    <p>This was a solo execution within a collaborative framework. I authored the article to interpret the theme through a visual anthropological lens and photographed all original assets to ensure a unique visual language. I then designed the layout, strictly applying Gestalt principles and grid systems to create a reading experience that felt structured yet immersive.</p>
                                     <h5>Key Deliverables</h5>
                                     <ul>
+                                        <li><strong>Editorial Design:</strong> High-fidelity layout using strict grids.</li>
                                         <li><strong>Content Creation:</strong> Original article and photography.</li>
-                                        <li><strong>Layout Design:</strong> High-fidelity editorial pages.</li>
-                                        <li><strong>Theory Application:</strong> Practical use of Gestalt principles.</li>
+                                        <li><strong>Visual Theory:</strong> Practical application of Gestalt principles.</li>
                                     </ul>
                                     <h5>What I Learned</h5>
                                     <div class="learning-box">
                                         <ul>
                                             <li><strong>Visual Storytelling:</strong> I learned how photography can act as a narrative medium, not just decoration.</li>
-                                            <li><strong>Grids:</strong> I gained a deeper appreciation for how rigid grid systems actually allow for more creative freedom.</li>
+                                            <li><strong>The Power of Grids:</strong> I gained a deeper appreciation for how rigid grid systems actually allow for more creative freedom.</li>
                                         </ul>
                                     </div>
                                     <div class="project-links-inside mt-4">
@@ -343,18 +343,18 @@
                         <div class="col-12 col-lg-6 textual">
                             <h2>Hoedown After Dark</h2>
                             <h4 class="project-subtitle">E-commerce Brand</h4>
-                            <div class="project-meta">Project Coordination &middot; Strategist</div>
+                            <div class="project-meta">Project Coordination &middot; Strategist &middot; Visual &amp; Brand Designer</div>
                             <p class="project-pitch">We created a fashion brand blending Western aesthetics with underground techno culture and the queer community. The goal was to build a strong visual identity and a tested product line that supported the LGBT Asylum charity.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
-                                    <p>I took charge of the project management. I managed the team workflow using a Kanban board to keep us agile. I developed the business model and SEO strategy to ensure the brand wasn't just visually cool, but commercially viable. In terms of design, I helped shape the visual identity and created social media content that resonated with Copenhagen’s queer community. I also applied persuasive design principles to the web prototype to drive donations.</p>
+                                    <p>I took charge of the project management, using a Kanban board to maintain an agile workflow. We applied Lean Startup principles to quickly test and validate the brand concept with our target audience. I developed the business model and SEO strategy to ensure the brand was commercially viable. In terms of design, I helped shape the visual identity and applied persuasive design principles to the web prototype to drive donations.</p>
                                     <h5>Key Deliverables</h5>
                                     <ul>
+                                        <li><strong>Visual &amp; Brand Identity:</strong> A cohesive brand guide.</li>
                                         <li><strong>Project Management:</strong> Agile workflow via Kanban.</li>
                                         <li><strong>Business Strategy:</strong> SEO analysis and Business Model Canvas.</li>
-                                        <li><strong>Visual Identity:</strong> A cohesive brand guide and social assets.</li>
                                     </ul>
                                     <h5>What I Learned</h5>
                                     <div class="learning-box">
