about text update.

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="col-md-7">
                         <h1 class="mt-0">About me</h1>
-                        <p class="fs-5 mb-4">Hello, I'm Edda, an Icelandic Multimedia Design student at Zealand Academy, specializing in UX Research, Visual Design, and Project Management. My approach to design is methodical and informed. I use my completed BA in Anthropology and Master's in Tourism to deeply analyze human challenges and translate those insights into clear, innovative digital solutions.</p>
+                        <p class="fs-5 mb-4">Hello, I'm Edda, an Icelandic Multimedia Design student at Zealand Academy, with a focus on UX Research, Visual Design, Front-End Development and Project Management. My approach to design is methodical and informed. I use my completed BA in Anthropology and Master's in Tourism to deeply analyze human challenges and translate those insights into clear, innovative digital solutions.</p>
 
                         <h2>How I work</h2>
                         <p class="fs-5 mb-4">Great digital experiences emerge from a methodology rooted in empathy and rigorous teamwork. My background ensures every project is grounded in genuine user understanding and sound reasoning. Maintaining an efficient workflow necessitates open communication and methodical structures. Ultimately, my focus is on contributing to solutions that are visually balanced, functionally clear, and authentically reflect human behavior.</p>
